<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Auricular Treats</string>
    <string name="main_logo">Main Logo</string>
    <string name="jukebox">Jukebox</string>
    <string name="radio">Radio</string>
    <string name="podcast">Podcast</string>
    <string name="log_in">Log In</string>
    <string name="or_sign_up_now">or Sign Up Now!!!</string>
    <string name="now_playing">Now \nPlaying</string>
    <string name="song">Song:</string>
    <string name="not_a_dull_moment">Not A Dull Moment</string>
    <string name="artist">Artist:</string>
    <string name="armchair_martian">Armchair Martian</string>
    <string name="album">Album:</string>
    <string name="war_of_the_worlds">War Of The Worlds</string>
    <string name="now_playing_album_art">Now Playing Album Art</string>
    <string name="jukebox_logo">Jukebox Logo</string>
    <string name="previous_button">Previous Button</string>
    <string name="next_button">Next Button</string>
    <string name="play_pause_button">Play/Pause Button</string>
    <string name="stop_button">Stop Button</string>
    <string name="about_jukebox_toast">Jukebox allows users to create a jukebox style playlist using music stored on their phone.</string>
    <string name="about_radio_toast">Radio allows users to create genre based station with music streamed from the internet.</string>
    <string name="about_podcast_toast">Podcast allows users to listen to their favorite Podcasts or create a Podcast of their own.</string>
    <string name="sign_up_toast">I will add a proper sign up pages as soon as I learn how.</string>
    <string name="log_in_toast">Logging In will allow users to save preferences and store playlists as well as interact with other users.</string>
    <string name="question_mark">\?</string>
    <string name="current_playlist">Current \nPlaylist</string>
    <string name="add_music">Add \nMusic</string>
    <string name="about_now_playing_toast">The Now Playing information will eventually be automatically populated with the metadata from the sound file of the song that is playing.</string>
    <string name="seekbar_toast">Scrub-A-Dub</string>
    <string name="previous_toast">The Previous Song Has Started</string>
    <string name="stop_toast">Music Screeches to a Halt</string>
    <string name="play_toast" tools:ignore="Typos">La La La, Here is Some Music For You</string>
    <string name="pause_toast">Silence, the Music has Paused</string>
    <string name="nest_toast">Next!!!</string>
    <string name="playlist_header">Playlist:</string>
    <string name="last_three_songs_header">Last Three Songs:</string>
    <string name="_3_third_to_last_song_played">3) Third to Last Song Played</string>
    <string name="_2_second_to_last_song_played">2) Second to Last Song Played</string>
    <string name="_1_last_song_played">1) Last Song Played</string>
    <string name="now_playing_header">Now Playing:</string>
    <string name="current_song_being_played">Current Song Being Played</string>
    <string name="next_ten_songs">Next Ten Songs:</string>
    <string name="_1_next_song">1) Next Song</string>
    <string name="_2_next_song">2) Next Song #2</string>
    <string name="_3_next_song">3) Next Song #3</string>
    <string name="_4_next_song">4) Next Song #4</string>
    <string name="_5_next_song">5) Next Song #5</string>
    <string name="_6_next_song">6) Next Song #6</string>
    <string name="_7_next_song">7) Next Song #7</string>
    <string name="_8_next_song">8) Next Song #8</string>
    <string name="_9_next_song">9) Next Song #9</string>
    <string name="_10_next_song">10) Next Song #10</string>
    <string name="about_playlist_toast">Playlist information will eventually be automatically populated with the metadata from the sound files and styled accordingly.</string>
    <string name="add_music_header">Add Music:</string>
    <string name="previous_arrows"><![CDATA[<<]]></string>
    <string name="next_arrow_buttons"><![CDATA[>>]]></string>
    <string name="album_art_1">Album Art 1</string>
    <string name="grenadine">Grenadine</string>
    <string name="nopalitos">Nopalitos</string>
    <string name="album_art_2">Album Art 2</string>
    <string name="das_efx">Das Efx</string>
    <string name="dead_serious">Dead Serious</string>
    <string name="album_art_3">Album Art 3</string>
    <string name="even_in_blackouts">Even In Blackouts</string>
    <string name="foreshadows_on_the_wall">Foreshadows on…</string>
    <string name="album_art_4">Album Art 4</string>
    <string name="search_field_hint">Search…</string>
    <string name="go_button_text">GO!!!</string>
    <string name="lagwagon">Lagwagon</string>
    <string name="hoss">Hoss</string>
    <string name="bad_religion">Bad Religion</string>
    <string name="recipe_for_hate">Recipe For Hate</string>
    <string name="pharcyde">Pharcyde</string>
    <string name="bizarre_ride">Bizarre Ride…</string>
    <string name="son_of_bazerk">Son of Bazerk</string>
    <string name="bazerk" tools:ignore="Typos">Bazerk Bazerk Bazerk</string>
    <string name="weird_al">Weird Al</string>
    <string name="uhf">UHF</string>
    <string name="willie_nelson">Willie Nelson</string>
    <string name="greatest_hits">Greatest Hits</string>
    <string name="toadies">Toadies</string>
    <string name="rubberneck">Rubberneck</string>
    <string name="swingin_utters">Swingin\' Utters</string>
    <string name="five_lessons_learned">Five Lessons Learned</string>
    <string name="go_button_toast">"Sorry, <xliff:g example="Band Name" id="searchText">%1$s</xliff:g> could not be found at this stage in development. Stay tuned for the fully functional version of this app!!!"</string>
    <string name="about_add_music_toast">This will be where users will go to add music to their playlists. In the final product the four click through boxes will group music by themes like: Top Rated, Genre, Most Listened, Least Listen, etc. This depends on the type of info I have access to in the metadata.</string>
    <string name="selected_album_s_artist">Selected Artist\'s Name:</string>
    <string name="about_selected_album_toast">In the functional version this information would be populated by the metadata of the music file and would probably be a list view that allows users to click on the songs to add them to their playlist.</string>
    <string name="selected_album">Selected Album</string>
    <string name="_1_song_one">1) Song One</string>
    <string name="_2_song_two">2) Song Two</string>
    <string name="sample_image_for_selected_music">Sample Image for Selected Music</string>
    <string name="_3_song_three">3) Song Three</string>
    <string name="_4_song_four">4) Song Four</string>
    <string name="_5_song_five">5) Song Five</string>
    <string name="_6_song_six">6) Song Six</string>
    <string name="_7_song_seven">7) Song Seven</string>
    <string name="_8_song_eight">8) Song Eight</string>
    <string name="_9_song_nine">9) Song Nine</string>
    <string name="_10_song_ten">10) Song Ten</string>
    <string name="radio_logo">Radio Logo</string>
    <string name="fm_header">FM</string>
    <string name="am_header">AM</string>
    <string name="fm_108">108</string>
    <string name="fm_106">106</string>
    <string name="fm_100">100</string>
    <string name="fm_96">96</string>
    <string name="fm_92">92</string>
    <string name="fm_88">88</string>
    <string name="am_1700">1700</string>
    <string name="am_1400">1400</string>
    <string name="am_1000">1000</string>
    <string name="am_800">800</string>
    <string name="am_600">600</string>
    <string name="am_540">540</string>
    <string name="tuning_header">Tuning</string>
    <string name="volume_button_header">Volume</string>
    <string name="current_song_info">In the fully functional app this will be scrolling information
    about the current song being played including, artist, title, album, song price and album price.</string>
    <string name="like_button_image">Like Button Image</string>
    <string name="buy_button">Buy Now</string>
    <string name="dislike_button">dislike_button</string>
    <string name="station_up_button">Station Up Button</string>
    <string name="station_down_button">Station Down Button</string>
    <string name="volume_up_button">Volume Up Button</string>
    <string name="volume_down_button">Volume Down Button</string>
    <string name="golden_oldies">1654 AM - Golden Oldies</string>
    <string name="classical">1397 AM - Classical</string>
    <string name="sports_string">1075 AM - Sports Talk</string>
    <string name="talk_radio">866 AM - Talk Radio</string>
    <string name="opera">702 AM - Opera</string>
    <string name="rock">108.5FM - Rock</string>
    <string name="alternative_rock">106.7.FM - Alternative Rock</string>
    <string name="the_hits">101.3 FM - The Hits</string>
    <string name="adult_contemporary">98.8 FM - Adult Contemporary</string>
    <string name="r_and_b"><![CDATA[95.5 FM - R&B]]></string>
    <string name="hip_hop">91.9 FM - Hip Hop</string>
    <string name="classic_radio_plays">590 AM - Classic Radio Plays</string>
    <string name="latino">88.2 FM - Latino</string>
    <string name="like_toast">This will note that the user likes the current song to increase the odds of it playing again in the stations rotation.</string>
    <string name="dislike_toast">This will note that the user dislikes the current song to decrease the odds of it playing again in the stations rotation.</string>
    <string name="buy_toast">This will send users to a site where they can buy the song, album or other works from the artist to then ad to the Jukebox feature of this app.</string>
    <string name="podcast_logo">Podcast Logo</string>
    <string name="podcast_menu_home">Home</string>
    <string name="podcast_menu_my_shows">My Shows</string>
    <string name="podcast_menu_find_shows">Find Shows</string>
    <string name="featured_podcast_header">Featured Podcast</string>
    <string name="featured_podcast_art">Featured Podcast Art</string>
    <string name="stop_podcasting_yourself">Stop Podcasting Yourself</string>
    <string name="genre_comedy">Genre: Comedy</string>
    <string name="episodes_443">Episodes: 443</string>
    <string name="popular_podcasts">Popular Podcasts</string>
    <string name="obdm">OBDM</string>
    <string name="how_did">How Did…</string>
    <string name="comedy">Comedy…</string>
    <string name="doug">Doug…</string>
    <string name="jj_go">JJ Go!!!</string>
    <string name="stuff_you">Stuff You…</string>
    <string name="example_image_1">Example Image 1</string>
    <string name="example_image_2">Example Image 2</string>
    <string name="example_image">Example Image</string>
    <string name="trending_podcasts">Trending Podcasts</string>
    <string name="the_joe">The Joe…</string>
    <string name="the_todd">The Todd…</string>
    <string name="mysterio">Mysterio…</string>
    <string name="wtf">WTF</string>
    <string name="tcgte">TCGTE</string>
    <string name="those">Those…</string>
    <string name="placeholder_art">Placeholder Art</string>
    <string name="selected_description"><b>Description: </b> This will be an area for a brief description of the show.</string>
    <string name="selected_grenre"><b>Grenre:</b> Insert Genre</string>
    <string name="subscribe">Subscribe</string>
    <string name="episodes_count"><b>Episodes:</b> 345</string>
    <string name="last_updated_example"><b>Last Updated:</b> 9/20/2016</string>
    <string name="podcast_title_example">Podcast Title</string>
    <string name="new_podcast_count">1</string>
    <string name="new_podcast_alert">New Podcast Alert</string>
    <string name="newest_episode_title">345 - Newest Episode Title</string>
    <string name="episode_description">Episode Description: This will contain a brief description of the episode.</string>
</resources>