<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/radioBackGroundRed"
    tools:context="com.thewickerbreaker.auriculartreats.Radio">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/radio_main_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/radio_logo_image"
                style="@style/portraitLogoStyle"
                android:background="@drawable/radio_page_rounded_corners"
                android:contentDescription="@string/radio_logo"
                android:src="@drawable/radio_logo_portrait" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nonlogo_main_container">

                <LinearLayout
                    android:id="@+id/main_radio_display"
                    style="@style/radioContentContainer"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/radio_stations"
                        style="@style/radioStationStyle">

                        <LinearLayout
                            android:id="@+id/radio_stations_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/fm_header"
                                style="@style/amfmHeaderStyle"
                                android:layout_weight=".79"
                                android:text="@string/fm_header" />

                            <View
                                android:id="@+id/am_fm_divider_line"
                                style="@style/jukeboxVerticalLine"
                                android:layout_gravity="center_horizontal" />

                            <TextView
                                android:id="@+id/am_header"
                                style="@style/amfmHeaderStyle"
                                android:layout_weight=".89"
                                android:text="@string/am_header" />
                        </LinearLayout>

                        <View
                            android:id="@+id/am_fm_header_divider_line"
                            style="@style/jukeboxHorizontalLine"
                            android:layout_width="match_parent" />

                        <LinearLayout
                            android:id="@+id/radio_station_container"
                            style="@style/radioStationContainer">

                            <LinearLayout
                                android:id="@+id/fm_stations"
                                style="@style/fmStationsStyle">

                                <TextView
                                    android:id="@+id/fm_108"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="24dp"
                                    android:text="@string/fm_108" />

                                <TextView
                                    android:id="@+id/fm_106"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="32dp"
                                    android:text="@string/fm_106" />

                                <TextView
                                    android:id="@+id/fm_100"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="32dp"
                                    android:text="@string/fm_100" />

                                <TextView
                                    android:id="@+id/fm_96"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="32dp"
                                    android:text="@string/fm_96" />

                                <TextView
                                    android:id="@+id/fm_92"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="32dp"
                                    android:text="@string/fm_92" />

                                <TextView
                                    android:id="@+id/fm_88"
                                    style="@style/stationStyle"
                                    android:text="@string/fm_88" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/station_lines"
                                android:layout_width="55dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:orientation="vertical">

                                <View
                                    android:id="@+id/large_station_line_1"
                                    style="@style/stationLargeLineStyle"
                                    android:layout_marginTop="10dp" />

                                <View
                                    android:id="@+id/small_station_line_1"
                                    style="@style/stationSmallLineStyle" />

                                <View
                                    android:id="@+id/large_station_line_2"
                                    style="@style/stationLargeLineStyle" />

                                <View
                                    android:id="@+id/small_station_line_2"
                                    style="@style/stationSmallLineStyle" />

                                <View
                                    android:id="@+id/large_station_line_3"
                                    style="@style/stationLargeLineStyle" />

                                <View
                                    android:id="@+id/small_station_line_3"
                                    style="@style/stationSmallLineStyle" />

                                <View
                                    android:id="@+id/large_station_line_4"
                                    style="@style/stationLargeLineStyle" />

                                <View
                                    android:id="@+id/small_station_line_4"
                                    style="@style/stationSmallLineStyle" />

                                <View
                                    android:id="@+id/large_station_line_5"
                                    style="@style/stationLargeLineStyle" />

                                <View
                                    android:id="@+id/small_station_line_5"
                                    style="@style/stationSmallLineStyle" />

                                <View
                                    android:id="@+id/large_station_line_6"
                                    style="@style/stationLargeLineStyle" />

                                <View
                                    android:id="@+id/small_station_line_6"
                                    style="@style/stationSmallLineStyle" />

                                <View
                                    android:id="@+id/large_station_line_7"
                                    style="@style/stationLargeLineStyle" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/am_stations"
                                style="@style/amStationsStyle"
                                android:gravity="center_horizontal">

                                <TextView
                                    android:id="@+id/am_1700"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="32dp"
                                    android:layout_marginTop="8dp"
                                    android:text="@string/am_1700" />

                                <TextView
                                    android:id="@+id/am_1400"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="36dp"
                                    android:text="@string/am_1400" />

                                <TextView
                                    android:id="@+id/am_1000"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="28dp"
                                    android:text="@string/am_1000" />

                                <TextView
                                    android:id="@+id/am_800"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="28dp"
                                    android:text="@string/am_800" />

                                <TextView
                                    android:id="@+id/am_600"
                                    style="@style/stationStyle"
                                    android:layout_marginBottom="24dp"
                                    android:text="@string/am_600" />

                                <TextView
                                    android:id="@+id/am_540"
                                    style="@style/stationStyle"
                                    android:text="@string/am_540" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dialsContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/turning_container">

                            <TextView
                                android:id="@+id/tunerHeader"
                                style="@style/dialHeaderStyle"
                                android:layout_marginTop="16dp"
                                android:text="@string/tuning_header" />

                            <LinearLayout
                                android:id="@+id/stationDial"
                                style="@style/dialContainerStyle"
                                android:layout_marginTop="8dp"
                                android:background="@drawable/dial_circle">

                                <ImageView
                                    android:id="@+id/stationUp"
                                    style="@style/dialArrowStyle"
                                    android:contentDescription="@string/station_up_button"
                                    android:src="@android:drawable/arrow_up_float" />

                                <View
                                    android:id="@+id/tunerButtonDivide"
                                    style="@style/jukeboxHorizontalLine" />

                                <ImageView
                                    android:id="@+id/stationDown"
                                    style="@style/dialArrowStyle"
                                    android:contentDescription="@string/station_down_button"
                                    android:src="@android:drawable/arrow_down_float" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:id="@+id/am_fm_switch_container">

                            <TextView
                                android:id="@+id/fm_switch_label"
                                style="@style/dialHeaderStyle"
                                android:layout_marginTop="8dp"
                                android:text="@string/fm_header" />

                            <Switch
                                android:id="@+id/am_fm_switch"
                                style="@style/amfmSwitchStyle" />

                            <TextView
                                android:id="@+id/am_switch_label"
                                style="@style/dialHeaderStyle"
                                android:layout_marginTop="16dp"
                                android:text="@string/am_header" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/volume_container">

                            <LinearLayout
                                android:id="@+id/volumeDial"
                                style="@style/dialContainerStyle"
                                android:layout_marginTop="8dp"
                                android:background="@drawable/dial_circle">

                                <ImageView
                                    android:id="@+id/volumeUp"
                                    style="@style/dialArrowStyle"
                                    android:contentDescription="@string/volume_up_button"
                                    android:src="@android:drawable/arrow_up_float" />

                                <View
                                    android:id="@+id/volumeButtonDivide"
                                    style="@style/jukeboxHorizontalLine" />

                                <ImageView
                                    android:id="@+id/volumeDown"
                                    style="@style/dialArrowStyle"
                                    android:contentDescription="@string/volume_down_button"
                                    android:src="@android:drawable/arrow_down_float" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/volumeHeader"
                                style="@style/dialHeaderStyle"
                                android:text="@string/volume_button_header" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/radio_inforomation_container"
                    style="@style/radioContentContainer"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/radio_now_playing"
                        style="@style/dialHeaderStyle"
                        android:layout_marginTop="16dp"
                        android:text="@string/now_playing_header" />

                    <TextView
                        android:id="@+id/radio_song_information"
                        style="@style/radioSongInfoStyle"
                        android:text="@string/current_song_info"/>

                    <LinearLayout
                        android:id="@+id/like_dislike_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/like_button"
                            style="@style/likeDislikeButtonStyle"
                            android:contentDescription="@string/like_button_image"
                            android:src="@drawable/thumbs_up" />

                        <TextView
                            android:id="@+id/buy_button"
                            style="@style/buyButtonStyle"
                            android:text="@string/buy_button" />

                        <ImageButton
                            android:id="@+id/dislike_button"
                            style="@style/likeDislikeButtonStyle"
                            android:contentDescription="@string/dislike_button"
                            android:src="@drawable/thumbs_down" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>